Big table optimization (#1477)